# Mirorr

./: .gitignore  AUTHORS.txt  CMakeLists.txt  LICENSE.txt  README.md  index.html  params.json
images/: fig1.xcf
markdown/: MainPage.md
python/: setup.py
python/mirorr/: interface.py
src/: CMakeLists.txt
src/CMakeConfig/: FindCImg.cmake  FindOpenCL.cmake
src/mirorr/: CMakeLists.txt  itkAbstractBlockMatcher.h  itkAbstractBlockMatcher.txx  itkBlockMatcher.h  itkBlockMatcher.txx  itkBlockMatcherGPU.h  itkBlockMatcherGPU.txx  itkBlockMatcherThreaded.h  itkBlockMatcherThreaded.txx  itkIOUtils.h  itkMirorrPyramidImplement.h  itkMirorrPyramidImplement.txx  itkMirorrPyramidWrapper.h  itkMirorrPyramidWrapper.txx  itkMirorrRegistrationMethod.h  itkMirorrRegistrationMethod.txx  itkMirorrUtilities.cxx  itkMirorrUtilities.h  itkPyramidScheduleTuner.h  itkPyramidScheduleTuner.txx  itkSparseImageRegionConstIterator.h  itkSparseImageRegionConstIterator.txx  itkSymMirorrRegistrationMethod.h  itkSymMirorrRegistrationMethod.txx  itkTransformUtils.h  mirorr.cxx  vnl_utils.h  vtkMirorrUtils.cxx  vtkMirorrUtils.h
src/mirorr/kernels/: convertCl2Header.sh  kMatch.cl  kMatch.h  kMeanVariance.cl  kMeanVariance.h  optKmatch.cl  optKmatch.h  optKmatchMask.cl  optKmatchMask.h
src/npw/: CMakeLists.txt
src/npw/NPWcuda/: CMakeLists.txt  NPWCudaConstants.h  NPWCudaDataPointer.h  NPWCudaHistogramCreator.h  NPWCudaOpenGLRenderer.cxx  NPWCudaOpenGLRenderer.h  NPWCudaRenderGeometryDirectlyFromCUDAKernel.cu  NPWCudaShapeDetermination.h  NPWCudaVertexBufferPointer.h  NPWCudaWindow.cxx  NPWCudaWindow.h  create_npw_cuda_links.sh
src/npw/NPWcuda/merde/npw/: CMakeLists.txt  MutualInformation.h  NPWCudaExtractGeometryKernel.cu  NPWCudaGeometryFunctions.h  NPWCudaHistogramCreator.cxx  NPWCudaKernelPrototypes.h  NPWCudaRenderGeometryDirectlyFromCUDAKernel.cu  NPWCudaShapeExpansion.h  NPWCudaUtilities.cxx  NPWCudaUtilities.h
src/npw/NPWcuda/merde/utilities/CMake/: FindDevIL.cmake
src/npw/NPWcuda/merde/utilities/CMake/cuda31/: FindCUDA.cmake  parse_cubin.cmake
src/npw/NPWcuda/merde/utilities/system/: npwcudainit.sh
src/npw/NPWmontecarlo/: CMakeLists.txt  db3DNPWmontecarlo.cxx  db3DNPWmontecarlo.h  dbMutualInformation.h  dbPoint3D.h  itkCimgUtil.h  sampling.h  utils.cxx  utils.h
src/npw/NPWopengl/: CMakeLists.txt  MutualInformation.h  NPWConstants.h  NPWGLImage.cxx  NPWGLImage.h  NPWGeometry.cxx  NPWGeometry.h  NPWJointHistogramCreator.cxx  NPWJointHistogramCreator.h  NPWOpenGLRenderer.cxx  NPWOpenGLRenderer.h  NPWStopwatch.h  NPWVertices.cxx  NPWVertices.h  NPWWindow.cxx  NPWWindow.h  Vector2.h  create_npw_opengl_links.sh
test/: test-gpu.sh  test.bat  test.sh
